# chess-opengl

./: CMakeLists.txt  README.md
src/: main.cpp
src/chess_game/: CMakeLists.txt  bishop.cpp  bishop.h  game.cpp  game.h  headerPieces.h  king.cpp  king.h  knight.cpp  knight.h  loadModel.cpp  loadModel.h  pawn.cpp  pawn.h  piece.cpp  piece.h  piece2.h  plato.cpp  plato.h  queen.cpp  queen.h  rook.cpp  rook.h  typePiece.h
src/chess_game/pieces3D/: header3D.h  pawn3D.cpp  pawn3D.h  piece3D.cpp  piece3D.h
src/interface_graphique/: CMakeLists.txt  camera.cpp  navigationcontrols.cpp  object.cpp  object.h  renderer.cpp  texture.cpp
